# piptheory

./: .env.example  .gitignore  .windsurfrules  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  config.json  opencode.jsonc  pyproject.toml  render.yaml  requirements.txt
.github/: copilot-instructions.md
.opencode/: openwork.json  package-lock.json
.streamlit/: config.toml
agents/: README.md
app/: __init__.py  main.py
dashboard/: __init__.py  app.py  loader.py  style.py
data/: ad_config.yaml  boe_latest.txt  boj_latest.txt  ecb_latest.txt  events.yaml  fomc_latest.txt  recent_events.yaml
design MDS/: DESIGN.md  theme.css  tokens.json  variables.css
docs/: ARCHITECTURE.md  PHASES.md  README.md  THEMES.md  TOOLING_SURVEY.md  WATCHLIST.md  blog-author-brief.md  seo-strategy.md
mt5/: README.md
nt8/: README.md
playbook/: README.md  central_bank_reading.md  positioning.md  regime_identification.md
scripts/: backfill_score_history.py  backfill_strength.py  build_static.py  dashboard_watchdog.ps1  dashboard_watchdog.vbs  debug_loader.py  fetch_central_bank_statements.py  fetch_statements_wrapper.vbs  install_dashboard_task.ps1  install_fetch_statements_task.ps1  install_scheduled_task.ps1  install_watchdog_task.ps1  make_og_image.py  push_state.ps1  run_agent_dry.py  run_bias_engine.py  run_daily.bat  run_daily.sh  run_dashboard.bat  run_hidden.vbs  run_positioning_real.py  smoke_unified_watchlist.py  test_data_layer.py  test_freshness.py  test_openrouter.py  test_prices.py  test_strength_engine.py  validate_strength.py  verify_strength_data.py
(+688 files in other folders)
